name: robotone
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
description:  

library
    build-depends: base, containers, mtl, parsec, transformers, logict
    exposed-modules: Writeup Types TidyingMoves TexBase Tex TestData TestData2
                   Suspension RobotM Printing Parser Move Match Library
                   Expansion DeletionMoves ApplyingMoves
    hs-source-dirs: src

executable robotone
    build-depends:  base, containers, mtl, parsec, transformers, logict
    main-is: Main.hs
    hs-source-dirs: src
    other-modules: Writeup Types TidyingMoves TexBase Tex TestData TestData2
                   Suspension RobotM Printing Parser Move Match Library
                   Expansion DeletionMoves ApplyingMoves
 
test-suite test-robotone
    build-depends:   base, QuickCheck, containers, logict, parsec, transformers
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: src
    other-modules: Writeup Types TidyingMoves TexBase Tex TestData TestData2
                   Suspension RobotM Printing Parser Move Match Library
                   Expansion DeletionMoves ApplyingMoves
